# wealth-app

./: CLAUDE.md  Execution_tracker.md
architecture/: 01-platform-overview.md  02-module-architecture.md  03-frontend-architecture.md  04-backend-architecture.md  05-database-architecture.md  06-api-design.md  07-administration-and-rbac.md  README.md  (+5 more)
server/: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
server/app/: config.py  main.py
server/app/account/: router.py  schemas.py  service.py
server/app/auth/: models.py  router.py  schemas.py  service.py
server/app/database/: __init__.py  base.py  session.py
server/app/database/migrations/: env.py
server/app/database/migrations/versions/: 0697e7d079c8_deals_add_news_items_and_news_.py  2f3cb9c93004_initial_schema.py  95660dd0b8b0_deals_add_documents_reviews_shares_.py  c7717d8c0df3_deals_add_email_and_google_drive_.py  eda7dc5d5c58_deals_add_core_tables.py
server/app/modules/admin/: models.py  repository.py  router.py  schemas.py  service.py
server/app/modules/deals/: models.py  repository.py  router.py  schemas.py  service.py
server/app/shared/: dependencies.py  exceptions.py  schemas.py  utils.py
server/app/shared/middleware/: __init__.py  rate_limit.py  request_logging.py  tenant_context.py
server/app/tasks/: audit.py  celery_app.py  email.py
server/scripts/: create_schemas.py  seed.py
server/tests/: conftest.py
server/tests/integration/: test_account_endpoints.py  test_admin_endpoints.py  test_auth_endpoints.py
server/tests/unit/: test_auth_service.py
(+252 files in other folders)
